src/test/deca/codegen/invalid/test_division_zero_int.deca
// Description :
//    Test de l'opération divide avec un diviseur nul sur un entier
//
// Resultats:
//    Erreur : Division par zero
{
    int x= 2/0;
}